--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -33,6 +33,8 @@ html lang="en"
               li= link_to "Link 1", "/path1"
               li= link_to "Link 2", "/path2"
               li= link_to "Link 3", "/path3"
+            ul.nav.navbar-nav.pull-right
+              li #{cart.items.count} items in cart
 
     .container
       = bootstrap_flash
