--- a/app/views/purchases/new.html.slim
+++ b/app/views/purchases/new.html.slim
@@ -1,12 +1,16 @@
-table.table.table-striped.table-hover
-  thead
-    tr
-      th Product
-      th Price
-      th Quantity
-  tbody
-    - @items.each do |item|
+= form_tag purchases_path do
+  table.table.table-striped.table-hover
+    thead
       tr
-        td= item.name
-        td= display_price item
-        td
+        th Product
+        th Price
+        th Quantity
+    tbody
+      - @items.each do |item|
+        tr
+          td
+            = item.name
+            = hidden_field_tag "item_ids[]", item.id
+          td= display_price item
+          td= number_field_tag "quantities[]", 1
+  button.btn.btn-primary Checkout
