--- a/app/views/products/index.html.slim
+++ b/app/views/products/index.html.slim
@@ -10,3 +10,5 @@ h2= @category.name
     /= form_tag category_product_add_to_cart_path(@category, prod), method: :put do
     /  button.btn.btn-default Buy
     = button_to "Buy", category_product_add_to_cart_path(@category, prod), method: :put, class: "btn btn-default"
+    a.add-to-cart href="#" data-product-id=prod.id
+      | Buy
